--- a/OOP/OOP.vcxproj.filters
+++ b/OOP/OOP.vcxproj.filters
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="22_variable_argument.cpp" />
+    <ClCompile Include="01_class.cpp" />
   </ItemGroup>
 </Project>
