--- a/OOP/OOP.vcxproj
+++ b/OOP/OOP.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="05_delegating_contructor.cpp" />
+    <ClCompile Include="09_class_and_const.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
