--- a/OOP/OOP.vcxproj
+++ b/OOP/OOP.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="09_class_and_const.cpp" />
+    <ClCompile Include="12_singleton_pattern.cpp" />
+    <ClCompile Include="13_friend_class.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
