--- a/MICS/MICS.vcxproj.filters
+++ b/MICS/MICS.vcxproj.filters
@@ -2,9 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="섯다.h" />
+    <ClInclude Include="Math.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="섯다.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test1.cpp" />
+    <ClCompile Include="test2.cpp" />
+    <ClCompile Include="Math.cpp" />
   </ItemGroup>
 </Project>
