--- a/OOP/OOP.vcxproj.filters
+++ b/OOP/OOP.vcxproj.filters
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="09_class_and_const.cpp" />
+    <ClCompile Include="12_singleton_pattern.cpp" />
+    <ClCompile Include="13_friend_class.cpp" />
   </ItemGroup>
 </Project>
