--- a/Oprator_Overloading/Oprator_Overloading.vcxproj.filters
+++ b/Oprator_Overloading/Oprator_Overloading.vcxproj.filters
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="15_nested_types.cpp" />
+    <ClCompile Include="00_Operator_overloading.cpp" />
   </ItemGroup>
 </Project>
