--- a/Oprator_Overloading/Oprator_Overloading.vcxproj
+++ b/Oprator_Overloading/Oprator_Overloading.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="00_Operator_overloading.cpp" />
+    <ClCompile Include="04_relational.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
