--- a/Oprator_Overloading/Oprator_Overloading.vcxproj.filters
+++ b/Oprator_Overloading/Oprator_Overloading.vcxproj.filters
@@ -1,6 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClCompile Include="09_02_RVO_NRVO.cpp" />
-  </ItemGroup>
-</Project>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
