--- a/Object_Relationship/Object_Relationship.vcxproj.filters
+++ b/Object_Relationship/Object_Relationship.vcxproj.filters
@@ -1,7 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClCompile Include="03_association.cpp" />
-    <ClCompile Include="04_dependencies.cpp" />
-  </ItemGroup>
-</Project>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" />
