--- a/STL/STL.vcxproj
+++ b/STL/STL.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{62512d26-f395-482c-9699-63670081e6da}</ProjectGuid>
-    <RootNamespace>Template</RootNamespace>
+    <ProjectGuid>{c8158ad4-9f10-4943-990b-c81f5305edd7}</ProjectGuid>
+    <RootNamespace>STL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,15 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="02_my_array.inl">
-      <FileType>Document</FileType>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="02_my_array.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="08_typename_and_nested_depentdent_type_name.cpp" />
+    <ClCompile Include="01_stl_and_container.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
