--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="02_my_arrary.cpp" />
+    <ClInclude Include="02_my_array.h" />
+    <ClInclude Include="02_my_array.inl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="02_my_arrary.h" />
-    <ClInclude Include="02_my_arrary.inl" />
+    <ClCompile Include="08_typename_and_nested_depentdent_type_name.cpp" />
   </ItemGroup>
 </Project>
