--- a/MICS/MICS.vcxproj.filters
+++ b/MICS/MICS.vcxproj.filters
@@ -1,15 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="섯다.h" />
-    <ClInclude Include="Math.h" />
+    <ClInclude Include="02_02_resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="섯다.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="test1.cpp" />
-    <ClCompile Include="test2.cpp" />
-    <ClCompile Include="Math.cpp" />
-    <ClCompile Include="const.cpp" />
+    <ClCompile Include="02_01_unique_ptr.cpp" />
   </ItemGroup>
 </Project>
