--- a/MICS/MICS.vcxproj.filters
+++ b/MICS/MICS.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="02_02_resource.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="02_01_unique_ptr.cpp" />
+    <ClCompile Include="smart_pointer\04_weak_ptr.cpp" />
   </ItemGroup>
 </Project>
