--- a/MICS/MICS.vcxproj
+++ b/MICS/MICS.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="smart_pointer\04_weak_ptr.cpp" />
+    <ClCompile Include="05_std_thread_and_basic_of_multithreading.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
