--- a/MICS/MICS.vcxproj.filters
+++ b/MICS/MICS.vcxproj.filters
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="smart_pointer\04_weak_ptr.cpp" />
+    <ClCompile Include="05_std_thread_and_basic_of_multithreading.cpp" />
   </ItemGroup>
 </Project>
